# delayed_rm

./: .pre-commit-config.yaml  .pylintrc  README.md  delayed_rm.py  pyproject.toml  setup.cfg
.github/workflows/: release.yml
delayed_rm/: __init__.py  delayed_rm.py
