[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "delayed_rm"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
keywords = ["rm"]
license = {text = "GPLv3"}
description = "Ever wish you had a few minutes to undo an rm? Now you do!"
urls = {Homepage = "https://github.com/zwimer/delayed_rm"}
requires-python = ">= 3.12"
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.scripts]
delayed_rm = "delayed_rm:cli"

[tool.setuptools]
license-files = ["LICENSE"]
include-package-data = false

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools.package-data]
delayed_rm = ["py.typed"]

[tool.setuptools.dynamic]
version = {attr = "delayed_rm.__version__"}

# Tools

[tool.black]
line-length = 120
target-version = ["py312", "py313"]

[tool.ruff]
ignore=["E731","E741"]
line-length = 120
[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.bandit]
skips = ["B404"]

[tool.vulture]
ignore_names = ["cli"]
paths = ["delayed_rm"]
