[metadata]
name = delayed_rm
version = attr: delayed_rm.__version__
url = https://github.com/zwimer/delayed_rm
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
license = GPL
license_files = LICENSE
description = Ever wish you had a few minutes to undo an rm? Now you do!
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.8
packages = find:

[options.package_data]
delayed_rm = py.typed

[options.entry_points]
console_scripts =
	delayed_rm = delayed_rm:cli
